--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
 
     <meta content="" name="description">
     <meta content="" name="keywords">
-
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -37,6 +36,7 @@
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/js/userView.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
   </head>
     <app-root></app-root>
