--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,12 @@
         <script src="assets/js/userView.js"></script>
         <script src="assets/vendor/php-email-form/validate.js"></script>
 
-    </head>
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 
-    <body id="body">
+    <body id="body" class="mat-typography">
         <app-root></app-root>
     </body>
 </html>
