--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-    <body id="body" class="mat-typography">
+    <body id="body">
         <app-root></app-root>
     </body>
 </html>
