--- a/src/index.html
+++ b/src/index.html
@@ -46,4 +46,8 @@
     <body id="body">
         <app-root></app-root>
     </body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" ></script>
+
 </html>
